--- a/external/pdfjs-2.1.266-dist/web/viewer.html
+++ b/external/pdfjs-2.1.266-dist/web/viewer.html
@@ -215,32 +215,32 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <input type="number" id="pageNumber" class="toolbarField pageNumber" title="Page" value="1" size="4" min="1" tabindex="15" data-l10n-id="page">
                 <span id="numPages" class="toolbarLabel"></span>
               </div>
-<!--              <div id="toolbarViewerRight">-->
-<!--                <button id="presentationMode" class="toolbarButton presentationMode hiddenLargeView" title="Switch to Presentation Mode" tabindex="31" data-l10n-id="presentation_mode">-->
-<!--                  <span data-l10n-id="presentation_mode_label">Presentation Mode</span>-->
-<!--                </button>-->
+              <div id="toolbarViewerRight">
+                <button id="presentationMode" class="toolbarButton presentationMode hiddenLargeView" title="Switch to Presentation Mode" tabindex="31" data-l10n-id="presentation_mode">
+                  <span data-l10n-id="presentation_mode_label">Presentation Mode</span>
+                </button>
 
-<!--                <button id="openFile" class="toolbarButton openFile hiddenLargeView" title="Open File" tabindex="32" data-l10n-id="open_file">-->
-<!--                  <span data-l10n-id="open_file_label">Open</span>-->
-<!--                </button>-->
+                <button id="openFile" class="toolbarButton openFile hiddenLargeView" title="Open File" tabindex="32" data-l10n-id="open_file">
+                  <span data-l10n-id="open_file_label">Open</span>
+                </button>
 
-<!--                <button id="print" class="toolbarButton print hiddenMediumView" title="Print" tabindex="33" data-l10n-id="print">-->
-<!--                  <span data-l10n-id="print_label">Print</span>-->
-<!--                </button>-->
+                <button id="print" class="toolbarButton print hiddenMediumView" title="Print" tabindex="33" data-l10n-id="print">
+                  <span data-l10n-id="print_label">Print</span>
+                </button>
 
-<!--                <button id="download" class="toolbarButton download hiddenMediumView" title="Download" tabindex="34" data-l10n-id="download">-->
-<!--                  <span data-l10n-id="download_label">Download</span>-->
-<!--                </button>-->
-<!--                <a href="#" id="viewBookmark" class="toolbarButton bookmark hiddenSmallView" title="Current view (copy or open in new window)" tabindex="35" data-l10n-id="bookmark">-->
-<!--                  <span data-l10n-id="bookmark_label">Current View</span>-->
-<!--                </a>-->
+                <button id="download" class="toolbarButton download hiddenMediumView" title="Download" tabindex="34" data-l10n-id="download">
+                  <span data-l10n-id="download_label">Download</span>
+                </button>
+                <a href="#" id="viewBookmark" class="toolbarButton bookmark hiddenSmallView" title="Current view (copy or open in new window)" tabindex="35" data-l10n-id="bookmark">
+                  <span data-l10n-id="bookmark_label">Current View</span>
+                </a>
 
-<!--                <div class="verticalToolbarSeparator hiddenSmallView"></div>-->
+                <div class="verticalToolbarSeparator hiddenSmallView"></div>
 
-<!--                <button id="secondaryToolbarToggle" class="toolbarButton" title="Tools" tabindex="36" data-l10n-id="tools">-->
-<!--                  <span data-l10n-id="tools_label">Tools</span>-->
-<!--                </button>-->
-<!--              </div>-->
+                <button id="secondaryToolbarToggle" class="toolbarButton" title="Tools" tabindex="36" data-l10n-id="tools">
+                  <span data-l10n-id="tools_label">Tools</span>
+                </button>
+              </div>
               <div id="toolbarViewerMiddle">
                 <div class="splitToolbarButton">
                   <button id="zoomOut" class="toolbarButton zoomOut" title="Zoom Out" tabindex="21" data-l10n-id="zoom_out">
